# enginimate

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: main.yml  manim-render.yml
backend/routes/: main.py
backend/workflow/: graph.py  workflow.py
backend/workflow/agents/: planner.py
backend/workflow/models/: agent_schemas.py  state.py
backend/workflow/nodes/: coding_agent.py  evaluator.py  query_decomposer.py  reasoning_agent.py  render_and_upload.py  retriever.py  sql_uploader.py
backend/workflow/tools/: coding_agent.py  coding_agent_tools.py
backend/workflow/utils/: hf_space_wrapper.py  ingest_docs.py  logging_config.py  retrieve.py
backend/workflow/utils/HFSpace/: hf_space_wrapper.py
backend/workflow/utils/sandbox/: Dockerfile  sandbox_executor.py
deployments/code_embedding_model/: Dockerfile  README.md  app.py  requirements.txt
deployments/code_executor_manim/: Dockerfile  README.md  app.py  manim_executor.py
deployments/enginimate-render-service/: main.py  render.yaml  requirements.txt
deployments/enginimate_cron_job/: main.py  requirements.txt
deployments/render_manim_videos/: app.py
experimental/: manim_test.py  test.py
experimental/RAG/: main.ipynb
experimental/ai/: examples.ipynb  main.ipynb  rag.ipynb  workflow.ipynb
experimental/cloudinary/: todo.py  upload_vid_abs.py
experimental/manim_test/: main.py
